fixed logo position on mobile devices

--- a/landings/17/source/scss/_registration.scss
+++ b/landings/17/source/scss/_registration.scss
@@ -227,6 +227,7 @@
     .splash-block {
       & > .kado__logo {
         transform: translateY(20%);
+        margin-bottom: 15%;
       }
     }
   }
@@ -238,6 +239,7 @@
     .splash-block {
       & > .kado__logo {
         transform: translateY(45%);
+        margin-bottom: 30%;
       }
     }
 
@@ -248,21 +250,21 @@
         .form-block__title {
           margin: 0 auto;
           width: 100%;
-          max-width: 243px;
+          max-width: 343px;
           font-size: 20px;
           line-height: 1.2;
         }
         .form-block__subtitle {
           margin: 20px auto 30px;
           width: 100%;
-          max-width: 283px;
+          max-width: 383px;
           font-size: 16px;
           line-height: 1.3;
         }
         form {
           margin: 0 auto;
           width: 100%;
-          max-width: 250px;
+          max-width: 350px;
 
           .styled-input {
             width: 100%;
